Update style.css fixing navigation gap?

--- a/styles/style.css
+++ b/styles/style.css
@@ -15,7 +15,7 @@ html, body {
 
   display: flex;
   justify-content: space-between;
-  gap: 20px;         
+  gap: 5px;         
 
   font-family: sans-serif;
   font-size: 18px;
